--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h3></h3>
+        <h2>Antarctica</h2>
     </div>
 </div>
 
