minor changes in contact info

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ layout: default
     <div class="row">
         <div class="col-md-5">
             <h5>Contact</h5>
+            <a href="mailto:cecile.agosta@gmail.com">cecile.agosta@gmail.com</a><br>
             Laboratoire des Sciences du Climat et de l'Environnement (LSCE)<br>
             GLACCIOS & CLIM research teams. ANR ASUMA.<br>
-            <a href="mailto:cecile.agosta@gmail.com">cecile.agosta@gmail.com</a><br>
             <strong>Office:</strong><br>
-            LSCE-Orme, CEA-Orme des Merisiers F-91191 Gif-sur-Yvette Cedex<br>
+            LSCE-Orme, CEA-Orme des Merisiers 91191 Gif-sur-Yvette FRANCE<br>
             Building 703 Room 28<br>
-            Tel: 01 69 08 69 27
+            Tel: +33 1 69 08 69 27
             <hr>
         </div>
         <div class="col-md-4 text-center">
