--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@ layout: default
         <div class="col-md-5">
             <h5>Contact</h5>
             <a href="mailto:cecile.agosta@gmail.com">cecile.agosta@gmail.com</a><br>
+            <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-4091-1653" href="https://orcid.org/0000-0003-4091-1653" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0003-4091-1653</a></div>
             Laboratoire des Sciences du Climat et de l'Environnement (LSCE)<br>
-            GLACCIOS & CLIM research teams. ANR ASUMA.<br>
+            GLACCIOS & CLIM research teams. <br>
             <strong>Office:</strong><br>
             LSCE-Orme, CEA-Orme des Merisiers 91191 Gif-sur-Yvette FRANCE<br>
             Building 703 Room 28<br>
