--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
             <strong>2008-2012</strong> Doctoral Researcher at the Laboratoire de Glaciologie et Géophysique de l’Environnement (LGGE, now IGE), Grenoble, France.<br>
             <hr>
             <h5>Research interests</h5>
-            <p>Keywords: ANTARCTICA ⦁ POLAR CLIMATE ⦁ POLAR PROCESSES ⦁ CLIMATE PROJECTIONS ⦁ CLIMATE RECONSTRUCTIONS ⦁ SEA LEVEL RISE </p>
+            <p>Keywords: ANTARCTICA ⦁ POLAR CLIMATE ⦁ POLAR PROCESSES ⦁ CLIMATE PROJECTIONS ⦁ CLIMATE RECONSTRUCTIONS ⦁ SEA LEVEL </p>
             <p>Tools: Regional Climate Model <a href="http://www.mar.cnrs.fr/">MAR</a> ⦁ Observations ⦁ Water stable isotopes ⦁ Reanalyses outputs ⦁ Global Climate Models outputs</p>
 			<p> <strong>Understanding and modelling the Antarctic surface mass balance and climate</strong></p>
             <p>Each year, the snowfall amount accumulating at the top of the Antarctic ice sheet is equivalent to twice the current sea level rise. This water flux, known as the Antarctic surface mass balance, has a direct impact on the sea level budget. Uncertainties on this mass flux are large as (1) it depends primarily on the strong large-scale climate variability; and (2) most of the polar-specific physical processes implied are still to be understood and quantified.</p>
