--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
             Laboratoire des Sciences du Climat et de l'Environnement (LSCE)<br>
             GLACCIOS & CLIM research teams. <br>
             <strong>Office:</strong><br>
-            LSCE-Orme, CEA-Orme des Merisiers 91191 Gif-sur-Yvette FRANCE<br>
+            LSCE, Orme des Merisiers 91191 Gif-sur-Yvette FRANCE<br>
             Building 703 Room 28<br>
             Tel: +33 1 69 08 69 27
             <hr>
