--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     <div class="row">
         <div class="col-md-5">
             <h5>Contact</h5>
-            <a href="mailto:cecile.agosta@gmail.com">cecile.agosta@gmail.com</a><br>
+            <a href="mailto:cecile.agosta@lsce.ipsl.fr">cecile.agosta@lsce.ipsl.fr</a><br>
             <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-4091-1653" href="https://orcid.org/0000-0003-4091-1653" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0003-4091-1653</a></div>
             Laboratoire des Sciences du Climat et de l'Environnement (LSCE)<br>
             GLACCIOS & CLIM research teams. <br>
