--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ layout: default
     <div class="row">
         <div class="col-md-10">
             <h5>Positions</h5>
-            <strong>Since Nov. 2019</strong>  Marie Skłodowska-Curie Research Fellow at LSCE, Paris-Saclay, France.<br>
+            <strong>2019-2021</strong> Researcher CEA at LSCE, Paris-Saclay, France.<br>
+            <strong>2019-2021</strong> Marie Skłodowska-Curie Research Fellow at LSCE, Paris-Saclay, France.<br>
 			<strong>2018-2019</strong> Research Fellow at LSCE, Paris-Saclay, France.<br>
             <strong>2014-2017</strong> Research Fellow of the Belgian Fund for Scientific Research (FNRS). Laboratory of Climatology, U. Liège, Belgium.<br>
             <strong>2012-2014</strong> Postdoctoral Researcher, EU FP7-COFUND mobility program. Laboratory of Climatology, U. Liège, Belgium.<br>
