--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@ layout: default
             Tel: +33 1 69 08 69 27
             <hr>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-3 text-center">
             <br>
-            <img src="{{site.baseurl}}/img/cecileagosta.jpg"  alt="" class="img-responsive">
+            <img src="{{site.baseurl}}/img/cecile_iceberg.jpg"  alt="" class="img-responsive">
+            <img src="{{site.baseurl}}/img/cecile_now.jpg"  alt="" class="img-responsive">
         </div>
     </div>
     <div class="row">
