status and photo

--- a/index.html
+++ b/index.html
@@ -24,16 +24,20 @@ layout: default
             Tel: +33 1 69 08 69 27
             <hr>
         </div>
-        <div class="col-md-3 text-center">
+        <div class="col-md-2 text-center">
             <br>
             <img src="{{site.baseurl}}/img/cecile_iceberg.jpg"  alt="" class="img-responsive">
+        </div>
+        </div>
+        <div class="col-md-2 text-center">
+            <br>
             <img src="{{site.baseurl}}/img/cecile_now.jpg"  alt="" class="img-responsive">
         </div>
     </div>
     <div class="row">
         <div class="col-md-10">
             <h5>Positions</h5>
-            <strong>2019-2021</strong> Researcher CEA at LSCE, Paris-Saclay, France.<br>
+            <strong>Since Nov. 2021</strong> CEA Scientist at LSCE, Paris-Saclay, France.<br>
             <strong>2019-2021</strong> Marie Skłodowska-Curie Research Fellow at LSCE, Paris-Saclay, France.<br>
 			<strong>2018-2019</strong> Research Fellow at LSCE, Paris-Saclay, France.<br>
             <strong>2014-2017</strong> Research Fellow of the Belgian Fund for Scientific Research (FNRS). Laboratory of Climatology, U. Liège, Belgium.<br>
