status and photo

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@ layout: default
         <div class="col-md-2 text-center">
             <br>
             <img src="{{site.baseurl}}/img/cecile_iceberg.jpg"  alt="" class="img-responsive">
-        </div>
-        </div>
-        <div class="col-md-2 text-center">
-            <br>
-            <img src="{{site.baseurl}}/img/cecile_now.jpg"  alt="" class="img-responsive">
+            <img src="{{site.baseurl}}/img/cecile_now.JPG"  alt="" class="img-responsive">
         </div>
     </div>
     <div class="row">
