status and photo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
         </div>
         <div class="col-md-3 text-center">
             <br>
-            <img src="{{site.baseurl}}/img/cecile_now.JPG"  alt="" class="img-responsive">
+            <img src="{{site.baseurl}}/img/cecile_ice.JPG"  alt="" class="img-responsive">
             <img src="{{site.baseurl}}/img/cecile_iceberg.jpg"  alt="" class="img-responsive">
         </div>
     </div>
