update phone number and office room

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ layout: default
             GLACCIOS & CLIM research teams. <br>
             <strong>Office:</strong><br>
             LSCE, Orme des Merisiers 91191 Gif-sur-Yvette FRANCE<br>
-            Building 703 Room 28<br>
-            Tel: +33 1 69 08 15 04
+            Building 703 Room 18A<br>
+            Tel: +33 1 69 08 46 72
             <hr>
         </div>
         <div class="col-md-4 text-center">
